tdf#109285 sw numbering: RemoveLeadingWhiteSpace from all paras

Change-Id: Ie834b9c10c9a6cfd7971c7713c5684157477acc4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/138807
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>